--- a/public/assets/css/criar-projeto.css
+++ b/public/assets/css/criar-projeto.css
@@ -7,6 +7,12 @@
     justify-content: space-around;
 }
 
+.errors{
+    border: solid green;
+    color: #EF4243;
+    font-weight: bold;
+}
+
 .form{
     width: 785px;
     height: auto;
