--- a/public/assets/css/contato.css
+++ b/public/assets/css/contato.css
@@ -3,7 +3,7 @@
     height: 920px;
     margin: 0 auto;
     display: flex;
-    padding-top: 200px;
+    padding-top: 150px;
     justify-content: space-around;
 }
 
@@ -67,9 +67,31 @@
     margin-top: 24px;
 }
 
+
+.container-info .btn{
+    display: flex;
+    justify-content: center;
+    margin-top: 32px;
+}
+.container-info .btn button{
+    background-color: #EF4243;
+    border: none;
+    border-radius: 4px;
+    width: 180px;
+    height: 32px;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 14px;
+}
+.container-info .btn button:hover{
+    background-color: #252525;
+}
+
 #telefone{
     margin-top: 18px;
 }
+
 
 
 @media (max-width: 768px) {
