--- a/public/assets/css/navbar-footer.css
+++ b/public/assets/css/navbar-footer.css
@@ -7,22 +7,34 @@ body{
 }
 
 
-nav{ 
-    width: 100%;
-    height: 60px;
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 2px solid rgba(239, 66, 66, 0.384);
-    position: fixed;
-}
+
+
 
 
 
 /* ----------------------- NAVBAR ----------------------- */
 
 
+
+
+.nav-item a{
+    font-size: 18px;
+    font-weight: bold;
+    color: #000000;
+    text-decoration: none;
+    margin-left: 32px;
+}
+.nav-item a:hover{
+    color: #EF4243;
+}
+
+.nav-active{
+    color: #EF4243 ;
+}
+
+
+
+/*
 .navbar{
     width: 1116px;
     height: 40px;
@@ -30,6 +42,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     margin-top: 15px;
+
 }
 .navbar .btn-menumobile{
     display: none;
@@ -97,19 +110,14 @@ footer{
 }
 
 /*  */
-.titulo{
+.titulo-pag{
     font-weight: bold;
     display: flex;
     align-items: center;
 }
 
-.destaque{
-    width: 8px;
-    height: 25px;
-    background-color: #EF4243;
-    margin-right: 6px;
-    display: inline block;
-}
+
+
 
 /* ------------------- */
 
