--- a/public/assets/css/criar-projeto.css
+++ b/public/assets/css/criar-projeto.css
@@ -1,156 +1,49 @@
-.container-criar{
-    width: 1280px;
-    height: 920px;
-    margin: 0 auto;
-    display: flex;
-    padding-top: 150px;
-    justify-content: space-around;
-}
 
-.errors{
+.errors {
     color: #EF4243;
     font-weight: bold;
 }
 
-.form{
-    width: 785px;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-}
-.form button{
-    background-color: #EF4243;
-    font-size: 18px;
-    font-weight: bold;
-    width: 150px;
-    height: 40px;
-    border: 2px solid #EF4243;
-    border-radius: 4px;
-    color: #fff;
-    margin-top: 28px;
-    cursor: pointer;
-}
-
-.form button:hover{
-    background-color: #252525;
-    border: 2px solid #252525;
-}
-
-
-.name{
-    margin-top: 24px;
-}
-
-label{
+label {
     font-weight: bold;
 }
 
-
-
-
-
-.descricao textarea{
-    padding: 8px;
-}
-
-
-
-
-
-.sub{
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    margin-top: 24px;
-    height: 265px;
-}
-
-.sub .data-img{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-}
-
-.sub .data-img .data input{
-    width: 100px;
-}
-
-.sub .data-img .img-input input{
-    border: none !important;
-}
-
-
-.btns{
+.btns {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 550px;
-    margin: 32px auto;
+    width: 300px;
+    margin: 52px auto;
 }
 
 .btns a {
-    background-color: transparent;
-    border: 2px solid #EF4243;
     font-size: 18px;
-    font-weight: bold;
-    width: 150px;
-    height: 40px;
-    border-radius: 4px;
-    color: #EF4243;
-    margin-top: 28px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
 }
-
-.btns a:hover{
-    background-color: #eceaea;
+form .btns button{
+    font-size: 18px;
 }
 
 
-
-.data{
+.data {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 600px;
+    margin: 24px auto;
 }
 
-.data .inicio input{
+.data .inicio input {
     width: 150px;
-}
-
-.inputs input{
-    width: 98.5%;
     height: 30px;
     border-radius: 4px;
     padding: 4px;
-    border: 1.8px solid #000000;
+    border: 1.8px solid #ccc;
+    margin-right: 12px;
 }
-.inputs span{
-    color: #EF4243;
-}
-
-
-.inputs input:focus{
-    background-color: #1e1e1e0c;
-}
-
-.inputs textarea{
+.data .termino input {
+    width: 150px;
+    height: 30px;
     border-radius: 4px;
-    border: 1.8px solid #000000;
-    resize: none;
-    width: 99.5%;
-}
-
-
-
-.info{
-    margin-top: 24px;
-}
-
-#telefone{
-    margin-top: 18px;
+    padding: 4px;
+    border: 1.8px solid #ccc;
 }
