--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -50,8 +50,16 @@ a:hover {
 
 
 /* ----------------------- SOBRE NOS ----------------------- */
+.card {
+    transition: all .3s ease;
+}
 
-
+.card:hover {
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(88, 88, 88, 0.75);
+    -moz-box-shadow: 0px 0px 15px 0px rgba(88, 88, 88, 0.75);
+    box-shadow: 0px 0px 15px 0px rgba(88, 88, 88, 0.75);
+    scale: 102%;
+}
 
 .container-sobre {
     margin-top: 38px;
@@ -64,10 +72,7 @@ a:hover {
     text-overflow: ellipsis
 }
 
-
 /* ----------------------- PROJETOS ----------------------- */
-
-
 
 
 
