--- a/public/assets/css/projetos.css
+++ b/public/assets/css/projetos.css
@@ -64,7 +64,7 @@ a {
 }
 
 .criar-proj a button {
-  background-color: #EF4243;
+  background-color: #EB5757;
   font-size: 18px;
   font-weight: bold;
   width: 150px;
