--- a/public/assets/css/navbar-footer.css
+++ b/public/assets/css/navbar-footer.css
@@ -53,6 +53,8 @@ h1{
 
 
 
+
+
 /*
 .navbar{
     width: 1116px;
@@ -152,62 +154,14 @@ footer{
 /* ------------------- */
 
 @media (max-width: 768px) {
-    body{
-        overflow-x: hidden;
-    }
-    .navbar{
-        width: 330px;
-    }
-    .navbar img{
-        width: 180px;
-        height:25px;
-        margin-top: 5px;
-    }
+   .nav-item{
+    text-align: center;
+   }
+}
 
-    .nav-list{
-        margin: 0 auto;
-        position: absolute;
-        top: 100%;
-        right: 0;
-        width: 100%;
-        height:10rem;
-        background-color: #fff;
-        flex-direction: column;
-        justify-content: space-around;
-        transform: translateX(100%);
-        transition: transform 0.3s ease-in;
-        border-bottom: 2px solid rgba(239, 66, 66, 0.384);
-    }
-
-    .navbar ul li{
-        margin: 0 auto;
-    }
-
-    .mobile-menu{
-        display: block;
-    }
-
-    .nav-list.active{
-        transform: translateX(0);
-    }
-
-     .mobile-menu.active .line1{
-        transform: rotate(-45deg) translate(-8px,8px);
-    }
-    .mobile-menu.active .line2{
-        opacity: 0;
-    }
-    .mobile-menu.active .line3{
-        transform: rotate(45deg) translate(-5px, -7px);
-    }
-
-    .container-footer{
-        width: 330px;
-    }
-    .conteudo-footer{
-        flex-direction: column;
-        padding: 6px;
-        justify-content: space-around;
-    }
-
+@media (max-width: 1440){
+    .teste {
+        display: flex !important;
+        justify-content: flex-end !important;
+        }
 }
