--- a/public/assets/css/contato.css
+++ b/public/assets/css/contato.css
@@ -32,11 +32,12 @@
     height: 30px;
     border-radius: 4px;
     padding: 4px;
-    margin-bottom: 12px;
+    margin-bottom: 14px;
     border: 1.8px solid #000000;
 }
 
 .inputs p{
+    margin-left: 4px;
     font-size: 14px;
     position: absolute;
     bottom: -22px;
