--- a/public/assets/css/projetos.css
+++ b/public/assets/css/projetos.css
@@ -114,10 +114,11 @@ a {
 .conteudo-projeto {
   margin-left: 24px;
   height: 191px;
-  width: 65%;
+  width: 70%;
   display: flex;
-  flex-direction: column;
+  position: relative;
 }
+
 
 .conteudo-projeto h1 {
   font-size: 20px;
@@ -128,6 +129,26 @@ a {
   padding-top: 6px;
 }
 
+
+
+.botao {
+  width: 95px;
+  height: 32px;
+  border: none;
+  border-radius: 4px;
+  margin-bottom: 6px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 12px;
+  font-weight: bold;
+}
+.botao i{
+  position: absolute;
+  left: 6px;
+}
+
 .conteudo-projeto p {
   margin-top: 12px;
   width: 100%;
@@ -136,14 +157,24 @@ a {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.btns{
+  display: flex;
+}
+#texto-projeto{
+  width: 100%;
+}
 
 .categoria-data {
-  margin-top: 95px;
+  margin-top: 55px;
   display: flex;
-  justify-content: right;
-  width: 100%;
-  height: 21px;
-  align-items: center;
+  padding-right: 6px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-end;
+  width: 23%;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 
 .categoria-data img {
@@ -201,12 +232,12 @@ a {
 
   .container-projeto {
     height: 320px;
+    border-bottom: 3px solid #EB5757;
   }
 
   .categoria-data {
     margin-top: 12px;
     padding-bottom: 6px;
-    border-bottom: 3px solid #EB5757;
     justify-content: center;
   }
 
