--- a/public/assets/css/contato.css
+++ b/public/assets/css/contato.css
@@ -1,7 +1,7 @@
 
  .container-contato{
     width: 1280px;
-    height: 920px;
+    height: auto;
     margin: 0 auto;
     display: flex;
     padding-top: 150px;
@@ -10,7 +10,6 @@
 
 .form{
     width: 785px;
-    height: auto;
     display: flex;
     flex-direction: column;
 }
@@ -28,7 +27,7 @@
 }
 
 .inputs input{
-    width: 98.5%;
+    width: 100%;
     height: 30px;
     border-radius: 4px;
     padding: 4px;
@@ -55,7 +54,7 @@
     border-radius: 4px;
     border: 1.8px solid #000000;
     resize: none;
-    width: 99.5%;
+    width: 100%;
 }
 
 
@@ -84,12 +83,23 @@
         flex-direction: column-reverse;
     }
 
-    .container-info h1{
+
+    .container-info{
+        text-align: center;
+    }
+
+    .container-info .ver-contatos{
         margin-top: -30px;
+        margin-bottom: 24px;
     }
 
     .form{
         width: 330px;
+        margin-top: 24px;
+    }
+
+    .form h1{
+        text-align: center;
     }
 
     .form button{
@@ -101,7 +111,7 @@
     }
 
     .inputs input{
-        width: 97%;
+        width: 100%;
     }
 
     textarea{
