--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -79,44 +79,16 @@ a:hover {
 
 /* CELULAR */
 @media (max-width: 768px) {
-    .container-painel {
-        width: 375px;
+    body{
+        overflow-x: hidden;
     }
 
-    .conteudo-painel {
-        height: 114.75px;
-        margin: 0 auto;
-        width: 320px;
-    }
+   .projetos{
+    flex-direction: column;
+    align-items: center;
+   }
 
-    .conteudo-painel h1 {
-        width: 350px;
-    }
-
-    .conteudo-painel form {
-        display: flex;
-        justify-content: center;
-    }
-
-    .list-projetos {
-        display: flex;
-        overflow-x: scroll;
-        scroll-snap-type: x mandatory;
-        scroll-padding: 24px;
-        gap: 6px;
-    }
-
-    .projeto {
-        margin-bottom: 80px;
-        flex: 0 0 100%;
-        scroll-snap-align: start;
-    }
-
-    .container-section {
-        width: 330px;
-    }
-
-    .view-all .all-button {
-        width: 250px;
-    }
+   .card{
+    margin-bottom: 24px;
+   }
 }
