--- a/public/assets/css/navbar-footer.css
+++ b/public/assets/css/navbar-footer.css
@@ -132,33 +132,13 @@ h1,h2{
 /* ----------------------- FOOTER ----------------------- */
 footer{
     width: 100%;
-    height: 95px;
+    height: auto;
     background-color: #1E1E1E;
     margin-top: 15%;
+    font-size: 12px;
 }
 
-.container-footer{
-    width: 1116px;
-    margin: 0 auto;
-}
 
-.conteudo-footer{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    color: #ccc;
-    padding: 6px;
-}
-
-/*  */
-.titulo-pag{
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-}
 
 
 
