--- a/public/assets/css/visualizar-projeto.css
+++ b/public/assets/css/visualizar-projeto.css
@@ -1,88 +1,130 @@
-.container {
-  width: 1116px;
-  margin: 0 auto;
-  /* border: solid pink; */
-  padding-top: 170px;
-}
 
 
 .container-projeto {
   width: 100%;
-  min-height: 800px;
-}
-
-
-.container-projeto .titulo-projeto {
-  width: 100%;
-  min-height: 68px;
-  margin-bottom: 24px;
-  text-align: center;
-}
-
-/* .container-projeto .data{
-  width: 100%;
-  height: 30px;
-  background-color: red;
-} */
-
-.titulo-projeto {
+  height: 800px;
   padding-top: 100px;
 }
 
+.container-projeto h1 {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  margin-bottom: 12px;
+}
 
-
-
-
-
-.btns {
+.container-projeto .data{
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  width: 550px;
-  margin: 32px auto;
+  margin-bottom: 20px;
+}
+
+.projeto {
+  width: 100%;
+  height: 732px;
+  display: flex;
+}
+
+.foto-projeto {
+  width: 700px;
+  height: 100%;
+}
+
+.foto-principal {
+  width: 100%;
+  height: 450px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.foto-principal img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.container-foto-secundaria {
+  width: 100%;
+  margin-top: 12px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.foto-secundaria {
+  width: 200px;
+  height: 100px;
+
+}
+
+.foto-secundaria img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+  opacity: .6;
+}
+.foto-secundaria img:hover{
+  opacity: 1;
 }
 
 
-.btns form button {
-  color: #fff;
+.descricao-projeto {
+  width: 546px;
+  height: auto;
+  margin-left: 24px;
 }
 
-.btns form button:hover {
-  color: #fff
+.descricao-projeto p {
+  height: auto;
 }
+
 
 
 @media (max-width: 768px) {
   .container {
     width: 375px;
     margin: 0 auto;
-    ;
   }
 
 
-  .titulo-projeto {
-    width: 100%;
-    min-height: 68px;
-    margin-bottom: 24px;
-    white-space: normal;
-  }
 
+  .container-projeto h1 {
+    height: auto;
+    padding-bottom: 12px;
+  }
 
   .projeto {
-    flex-direction: column-reverse;
+    flex-direction: column;
+    align-items: center;
   }
 
-  .projeto .foto-projeto .foto-principal img {
+  .foto-projeto {
     width: 375px;
     height: 200px;
   }
 
-  .projeto .foto-projeto .foto-secundaria img {
+  .foto-principal {
     width: 375px;
-    height: 200px;
+    height: 100%;
   }
 
-  .btns {
-    width: 375px;
+  .container-foto-secundaria {
+    width: 100%;
+    height: 100px;
+  }
+
+  .foto-secundaria {
+    width: 120px;
+    height: 100px;
+  }
+
+  .descricao-projeto {
+    width: 100%;
+    margin-bottom: 24px;
+    margin-top: 28%;
   }
 }
