--- a/public/assets/css/criar-projeto.css
+++ b/public/assets/css/criar-projeto.css
@@ -4,6 +4,15 @@
     font-weight: bold;
 }
 
+select:focus-visible,
+textarea:focus-visible,
+input:focus-visible {
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(235, 87, 87, 1) !important;
+    -moz-box-shadow: 0px 0px 5px 0px rgba(235, 87, 87, 1) !important;
+    box-shadow: 0px 0px 5px 0px rgba(235, 87, 87, 1) !important;
+    border: none;
+}
+
 label {
     font-weight: bold;
 }
