--- a/public/assets/css/projetos.css
+++ b/public/assets/css/projetos.css
@@ -37,7 +37,7 @@ a {
 }
 
 .pesquisar form button {
-  width: 120px;
+  width: 100px;
   height: 32px;
   border-radius: 0px 4px 4px 0px;
   background-color: #EB5757;
@@ -55,7 +55,7 @@ a {
 
 
 .container-projeto {
-  margin-top: 24px;
+  margin: 24px auto;
   border-bottom: 3px solid #EB5757;
   height: 195px;
   display: flex;
@@ -143,7 +143,6 @@ a {
 #texto-projeto {
   width: 100%;
 }
-
 .categoria-data {
   margin-top: 55px;
   display: flex;
@@ -156,6 +155,7 @@ a {
   right: 0;
   bottom: 0;
 }
+
 
 .categoria-data img {
   height: 14px;
@@ -236,11 +236,45 @@ a {
   }
 
   .pesquisar input {
-    width: 250px;
+    width: 150px;
+  }
+
+  .pesquisar button{
+    width: 100px;
   }
 
   .paginacao{
     display: flex;
     justify-content: center;
+  }
+}
+
+@media (max-width: 400px) {
+  .container-projeto{
+    width: 350px;
+  }
+
+    .conteudo-projeto {
+      width: 350px;
+    }
+  
+    .img-projeto {
+      width: 350px;
+      height: 200px;
+    }
+}
+
+@media (max-width: 320px) {
+  .container-projeto {
+    width: 300px;
+  }
+
+  .conteudo-projeto {
+    width: 300px;
+  }
+
+  .img-projeto {
+    width: 300px;
+    height: 200px;
   }
 }
