--- a/public/assets/css/visualizar-projeto.css
+++ b/public/assets/css/visualizar-projeto.css
@@ -1,9 +1,11 @@
-
-
 .container-projeto {
   width: 100%;
-  height: 800px;
+  height: auto;
   padding-top: 100px;
+}
+
+.projeto {
+  overflow: hidden;
 }
 
 .container-projeto h1 {
@@ -13,26 +15,21 @@
   margin-bottom: 12px;
 }
 
-.container-projeto .data{
+.container-projeto .data {
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
 }
 
-.projeto {
-  width: 100%;
-  height: 732px;
-  display: flex;
-}
 
 .foto-projeto {
-  width: 700px;
+  width: 600px;
   height: 100%;
 }
 
 .foto-principal {
   width: 100%;
-  height: 450px;
+  height: 400px;
 }
 
 a {
@@ -55,7 +52,7 @@ a {
 }
 
 .foto-secundaria {
-  width: 200px;
+  width: 185px;
   height: 100px;
 
 }
@@ -65,9 +62,11 @@ a {
   height: 100%;
   object-fit: cover;
   cursor: pointer;
-  opacity: .6;
+  opacity: .8;
+  border-radius: 4px;
 }
-.foto-secundaria img:hover{
+
+.foto-secundaria img:hover {
   opacity: 1;
 }
 
@@ -82,15 +81,17 @@ a {
   height: auto;
 }
 
-
+.btns {
+  display: flex;
+  justify-content: space-around;
+  margin: 24px auto;
+}
 
 @media (max-width: 768px) {
   .container {
     width: 375px;
     margin: 0 auto;
   }
-
-
 
   .container-projeto h1 {
     height: auto;
@@ -125,6 +126,27 @@ a {
   .descricao-projeto {
     width: 100%;
     margin-bottom: 24px;
-    margin-top: 28%;
+    margin-top: 30%;
+  }
+
+}
+
+@media (max-width: 450px) {
+  .descricao-projeto {
+    margin-top: 35%;
+  }
+
+}
+
+@media (max-width: 360px) {
+  .descricao-projeto {
+    margin-top: 40%;
+  }
+
+}
+
+@media (max-width: 300px) {
+  .descricao-projeto {
+    margin-top: 50%;
   }
 }
