--- a/public/assets/css/navbar-footer.css
+++ b/public/assets/css/navbar-footer.css
@@ -84,9 +84,20 @@ footer{
     width: 100%;
     height: auto;
     background-color: #1E1E1E;
-    margin-top: 15%;
-    font-size: 12px;
+    margin-top: 8%;
+    font-size: 13px;
+    
 }
+
+footer a{
+    text-decoration: underline !important;
+}
+
+footer a:hover{
+    color: #EF4243 !important;
+}
+
+
 
 
 
